# UFV

./: README.md
INF110/: .gitignore
INF110/Praticas/: 12A.cpp  13A.cpp  14E.cpp  A_horario.cpp  B_notas.cpp  C_copa.cpp  D_palindromo.cpp  E_area.cpp  E_volver.cpp  IMC.cpp  NotaFinal.cpp  Operacao.cpp  ParouImpar.cpp  Restaurante.cpp  Sorteio.cpp  a_vogais.cpp  baskara.cpp  bola.cpp  campo.cpp  circulo.cpp  combinacao.cpp  compacta.cpp  convhoras.cpp  copa.cpp  cra.cpp  data.cpp  distancia.cpp  divresto.cpp  doublets.cpp  elevador.cpp  fatoracao.cpp  freq.cpp  horario.cpp  intersecao.cpp  inverter.cpp  lata.cpp  linhavoide.cpp  maiorepar.cpp  mediana.cpp  minhocas.cpp  (+14 more)
INF110/Praticas - Larissa/: 11C.cpp  12B.cpp  12C.cpp  12D.cpp  13B.cpp  13C.cpp  13D.cpp  D_juiz.cpp  Desconto.cpp  MatrizporProva.cpp  Par.cpp  Ponte.cpp  Somatorio.cpp  alfabeto.cpp  area.cpp  barragem.cpp  bif.cpp  bissexto.cpp  caixa.cpp  campominado.cpp  catalan.cpp  concurso.cpp  contar.cpp  distintos.cpp  divreal.cpp  engrenagens.cpp  equa2.cpp  equacao.cpp  equacao2.cpp  espelho.cpp  fatorialEX.cpp  fibonacci.cpp  frac.cpp  funcaoFatoracao.cpp  funcaoVoid.cpp  futebol.cpp  got.cpp  guerra.cpp  igualoumaior.cpp  imposto.cpp  (+18 more)
INF110/TP1/: esqui.cpp  estacoes.cpp  maquina.cpp  maquinap.cpp  maquinapp.cpp
INF110/TP2/: pi.cpp
INF110/TP3/: PNMshop.cpp
INF110/TP4/: makefile  (+1 more)
INF222/: seminario_um.md
INF222/trabalho_um/: pyproject.toml
INF222/trabalho_um/tests/: test_trabalho_um.py
INF222/trabalho_um/trabalho_um/: simulacao.py
brute_force/: ch.in  convex_hull.cpp  dune-project
(+353 files in other folders)
