[tool.poetry]
name = "trabalho_um"
version = "0.1.0"
description = ""
authors = ["Lucas Joviniano <lucasjoviniano1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
